--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "^5.18.1",
     "cors": "^2.8.5",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
